Fix content jump when a single program teaser exists on a department and its opened. Fix hallmark overlapping program teaser drawer

--- a/web/themes/custom/citizen_dart/components/02-chunks/navigation/breadcrumbs/_breadcrumbs.scss
+++ b/web/themes/custom/citizen_dart/components/02-chunks/navigation/breadcrumbs/_breadcrumbs.scss
@@ -9,6 +9,7 @@
 	padding: $spaceMd 0 0;
 	ol {
 		@include listReset;
+    max-width: $textMax;
 	}
 
 	li{
